Nov 13: finished puzzle with levers, adding new class: effect , to explode the frog and it drops the code for codelock.
Nov 17(3 days no work D:< ): Brainstormed and wrote a little of new Effect class. Almost finished gravestone drawing (working very not regulary on it).
Nov 18: Fixed some code with lamps still working on effects.
Nov 19: progressing with adding effect class still fixing bugs with lamp puzzle, added new bug which eats all RAM in 1 minute after puzzle completed. D:
Nov 20: Was able to run animation will modificate Effect class further more. I exploded the frog. 
Nov 21: first good working version of Effect added, moved note with code for codelock so it look like frog droped it, but note lefts trail for some reason. 
Nov 25: kinematics
Nov 27: kinematics
Nov 28: dont ever try to do kinematics in python
Dec 1: trying to make animation neater, added textures that guys drawed. Will do kinematics later.
Dec 2: Exploded the frog
Dec 3: Note wirh code now apear beneath frog when it exploded
Dec 4-6: Learning git and github
Dec 7: Trying to add collectable that goes into inventory when clicked on
Dec 8: Can loot the key from the chest.
Dec 10: Can pick up tape from the box / not adding to inventory yet
Dec 15: Collectables are fully working, door can be open with key now. 
TODO: If not require to rewrite half of the code make maps be able to save progress, Make animation for waterdrop in a basement, make little minigame for fixing the pipe, move on to the sound probably <:
Dec 16: Fixed puzzle with frog (frog exploded when not all lamps on)
Dec 17: Started wotk on fix pipe minigame
Dec 22: Tape appear when LMB clicked and it changes shape depending on mouse pos. It was miracle that I was able to do this.
Dec 23: Finished fixpipe minigame on test.py need to polish it up and implicate in main code.
Dec 24 (11:59 pm): Polishing fixpipe. Have the idea how to make it a little more realistic, implementing idea now.