@@ -73,3 +73,5 @@ Dec 17: Started wotk on fix pipe minigame
 Dec 22: Tape appear when LMB clicked and it changes shape depending on mouse pos. It was miracle that I was able to do this.
 Dec 23: Finished fixpipe minigame on test.py need to polish it up and implicate in main code.
 Dec 24 (11:59 pm): Polishing fixpipe. Have the idea how to make it a little more realistic, implementing idea now.
+Dec 28: still trying
+Jan 1: Was slacking off all winter break trying to come back. Finished fixpipe minigame, need to implicate in main code.
